syntax = "proto3";

option java_multiple_files = true;

option java_package = "primenumberserver.grpc";
option java_outer_classname = "PrimeNumberProto";

package protobuf;

service PrimeNumber {
    rpc ListPrimeNumbers (PrimeNumberRequest) returns (PrimeNumberResponse) {}
}

message PrimeNumberRequest {
    int32 max = 1;
}

message PrimeNumberResponse {
    repeated int32 prime_numbers = 1;
}